<?xml version="1.0"?>
<package>
    <name>asusImageViewer</name>
    <version>0.0.0</version>
    <description>asusImageViewer package</description>

    <maintainer email="s.jakop872@gmail.com">Stefan Jakob</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
        
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>OpenCV</build_depend>
    <build_depend>openni2_camera</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>image_transport</build_depend>
  
    <run_depend>image_transport</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>OpenCV</run_depend>
    <run_depend>openni2_camera</run_depend>
 
  <export>
  </export>

</package>
